rabbitmq changes
changed queueproperties, queue name and routing key for manageMembers queue

changed amqpTemplate to rabbitTemplate for using convertSendAndReceive

added DomainToDTOMapper. Work still in progess